--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,4 +1,5 @@
 <h2><%= @message.title %></h2>
+<p>Posteado por <%= @message.user.email %> <%= time_ago_in_words(@message.created_at) %></p>
 <p><%= @message.description %></p>
 
 <h3>Comentarios:</h3>
