--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @message.title %></h2>
-<p>Posteado por <%= @message.user.email %> <%= time_ago_in_words(@message.created_at) %></p>
+<p>Posteado por <%= @message.user.email %> <%= time_ago_in_words(@message.created_at) %> atrás</p>
 <p><%= @message.description %></p>
 
 <h3>Comentarios:</h3>
@@ -11,5 +11,9 @@
 
 
 <%= link_to "Volver", root_path %>
-<%= link_to "Editar", edit_message_path(@message) %>
-<%= link_to "Borrar", message_path(@message), method: :delete, data: { confirm: "¿ Estás seguro ?"} %>
+<% if user_signed_in? %>
+<% if @message.user_id == current_user.id %>
+ <%= link_to "Editar", edit_message_path(@message) %>
+ <%= link_to "Borrar", message_path(@message), method: :delete, data: { confirm: "¿ Estás seguro ?"} %>
+ <% end %>
+<% end %>
