se arreglar bug de links de login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,11 @@
         <%= link_to "Pizarrón de Avisos", root_path, class: "navbar-brand" %>
       </div>
       <ul class="nav navbar-nav" >
-        <li><%= link_to "Ingresar", new_user_registration_path %></li>
+        <li><%= link_to "Registrar", new_user_registration_path %></li>
          <% if user_signed_in?  %>
          <li><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %></li>
          <% else %>
-         <li><%= link_to "Log In", new_user_registration_path %></li>
+         <li><%= link_to "Ingresar", user_session_path %></li>
          <% end %>
       </ul>
       <% if user_signed_in? %>
