--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,14 @@
 <% @messages.each do |message| %>
-<h2><%= message.title %></h2>
-<%= link_to "Ver mensajes", message_path(message), class: "btn btn-default" %>
+
+<div class="col-md-4">
+	<div class="message">
+		<h2 class="message-title"><%= message.title %></h2>
+         <%= link_to "Ver mensajes", message_path(message), class: "btn-custom" %>	
+	</div>
+
+</div>
 
 <% end %>
 
 
-<%= link_to "Nuevo Mensaje", new_message_path  %>
+
